# log-alchemist-mcp

./: .gitignore  README.md  SPACE_README.md  agent.json  pyproject.toml  requirements.txt
.continue/mcpServers/: log_alchemist.yaml  playwright-mcp.yaml
log-alchemist-mcp/: PROMPT.md  agent.local.json  agent.local.private.json  app.py  incident_sessions.py  mcp_server.py  smoke_test_mcp.py
